# officialBrainChain

./: .coverage.Stefano.local.75785.XwnTCIgx  .env.example  .gitignore  README.md  cleanup.sh  context_store.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  main.py
app/api/: __init__.py  chain_router.py  config_router.py  routes.py
app/chains/: __init__.py  script_chain.py
app/config/: factories.py
app/context/: __init__.py  vector.py
app/models/: __init__.py  config.py  embeddings.py  node_models.py  nodes.py  vector_store.py
app/nodes/: __init__.py  ai_nodes.py  base.py  logic_nodes.py  text_generation.py
app/utils/: __init__.py  callbacks.py  context.py  debug_callback.py  logging.py  retry.py  tracking.py
app/vector/: base.py  embeddings.py  pinecone_store.py
config/: .env.example  llm_configs.json
tests/: conftest.py  requirements-test.txt  test_batching.py  test_callbacks.py  test_client_reuse.py  test_context.py  test_script_chain.py  test_token_tracking.py  test_vector.py  test_vector_store.py
tests/core/: test_ai_functionality.py  test_ai_nodes.py  test_config.py  test_context_optimization.py  test_model_validation.py  test_real_api_integration.py  test_script_chain.py  test_text_generation.py
tests/models/: test_config.py
tests/unit/models/: test_nodes.py
